--- a/christmas-hours.html
+++ b/christmas-hours.html
@@ -114,15 +114,15 @@
       <tbody>
         <tr><td>Mon 22 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Tue 23 Dec</td><td class="closed">CLOSED</td></tr>
-        <tr><td>Wed 24 Dec</td><td class="open">OPEN 17:00 – 20:00</td></tr>
+        <tr><td>Wed 24 Dec</td><td class="open">OPEN 17:00 – 20:30 (Pre-orders only)</td></tr>
         <tr><td>Thu 25 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Fri 26 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Sat 27 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Sun 28 Dec</td><td class="open">OPEN 17:00 – 21:00</td></tr>
         <tr><td>Mon 29 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Tue 30 Dec</td><td class="closed">CLOSED</td></tr>
-        <tr><td>Wed 31 Dec</td><td class="open">OPEN 17:00 – 21:00</td></tr>
-        <tr><td>Thu 01 Jan</td><td class="open">OPEN 17:00 – 20:00</td></tr>
+        <tr><td>Wed 31 Dec</td><td class="open">OPEN 17:00 – 20:30 (Pre-orders only)</td></tr>
+        <tr><td>Thu 01 Jan</td><td class="open">OPEN 17:00 – 20:00 (Pre-orders only)</td></tr>
       </tbody>
     </table>
 
