--- a/christmas-hours.html
+++ b/christmas-hours.html
@@ -122,7 +122,7 @@
         <tr><td>Mon 29 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Tue 30 Dec</td><td class="closed">CLOSED</td></tr>
         <tr><td>Wed 31 Dec</td><td class="open">OPEN 17:00 – 20:30 (Pre-orders only)</td></tr>
-        <tr><td>Thu 01 Jan</td><td class="open">OPEN 17:00 – 20:00 (Pre-orders only)</td></tr>
+        <tr><td>Thu 01 Jan</td><td class="closed">CLOSED</td></tr>
       </tbody>
     </table>
 
