--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Rungs Thai Kitchen – Temporary Maintenance</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Rung's Thai Kitchen</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <style>
     :root{
       --accent:#d9464a;
@@ -2396,12 +2399,142 @@ body.overlay-open {
       We’re working hard to bring secure online payments to the website as soon as possible.<br>
       In the meantime, you can pay by <strong>cash or card on collection or delivery</strong>.
     </p>
-    <div class="phone">
-      📞 0113 469 9564
+
+    <div class="payment-icons">
+      <div class="payment-icon"><img src="images\payment\cash.svg" alt="Cash"></div>
+      <div class="payment-icon"><img src="images\payment\visa.svg" alt="Visa"></div>
+      <div class="payment-icon"><img src="images\payment\mastercard.svg" alt="Mastercard"></div>
+      <div class="payment-icon"><img src="images\payment\apple_pay.svg?v=2" alt="Apple Pay"></div>
+      <div class="payment-icon"><img src="images\payment\gpay.svg?v=2" alt="Google Pay"></div>
     </div>
-    <p style="margin-top:16px; font-size:0.9rem;">
-      Sorry for the inconvenience and thank you for your patience.
-    </p>
+  </div>
+</section>
+
+<footer id="contact">
+
+<footer id="contact">
+  <div class="footer-inner">
+
+    <!-- Contact + Social Section -->
+    <div class="footer-section">
+
+      <!-- Contact row all on ONE line -->
+      <div class="footer-contact-row">
+        <h4>Contact Us</h4>
+        <p class="contact-inline muted">
+          📞 <a href="tel:01134699564">0113 4699564</a>
+          <span class="dot">•</span>
+          ✉️ <a href="mailto:hello@rungsthaikitchen.co.uk">hello@rungsthaikitchen.co.uk</a>
+        </p>
+      </div>
+
+      <!-- Opening Hours -->
+      <h4>Opening Hours</h4>
+      <p class="muted">Opening Hours: 🕒 Wed–Sun: 17:00 – 21:00</p>
+
+      <!-- New Social Media Section -->
+      <h4>Social Media</h4>
+<p class="muted social-links">
+  <a href="https://www.facebook.com/RungsThaiKitchenLeeds" target="_blank" class="social-icon">
+    <svg viewBox="0 0 24 24" class="icon">
+      <path d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987H7.898v-2.89h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.771-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
+    </svg>
+    Facebook
+  </a>
+
+  <span class="dot">•</span>
+
+  <a href="https://www.instagram.com/RungThaiKitchen" target="_blank" class="social-icon">
+    <svg viewBox="0 0 24 24" class="icon">
+      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h10zm-5 3a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-.75a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5z"/>
+    </svg>
+    Instagram
+  </a>
+</p>
+
+
+    </div>
+
+    <div class="footer-divider"></div>
+
+    <!-- Legal -->
+    <div class="footer-legal">
+      <div class="footer-copy">
+        © <span id="year"></span> Rung’s Thai Kitchen. All rights reserved.
+      </div>
+      <nav class="footer-links" aria-label="Legal">
+        <a href="privacypolicy.html" target="_blank" rel="noopener">Privacy Policy</a>
+        <span class="dot">•</span>
+        <a href="cookiepolicy.html" target="_blank" rel="noopener">Cookie Policy</a>
+      </nav>
+    </div>
+
+  </div>
+</footer>
+
+
+
+
+  </div>
+
+  <!-- customise Modal -->
+  <div id="modal" class="modal-backdrop" role="dialog" aria-modal="true">
+    <div class="modal">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <div>
+          <div id="modal-title" style="font-weight:800">customise</div>
+          <div id="modal-base" class="muted small" style="margin-top:4px" data-price="0">Base price: £0.00</div>
+        </div>
+        <button id="modal-close" class="btn btn-ghost">Close</button>
+      </div>
+
+      <img id="modal-img" alt="" style="margin-top:10px;width:100%;max-height:200px;object-fit:contain;border-radius:10px;display:none">
+
+      <div style="display:grid;grid-template-columns:1fr;gap:12px;margin-top:12px">
+        <div>
+          <label class="small">Quantity</label>
+          <div class="qty-controls" style="margin-top:6px">
+            <button id="qty-decr" class="btn btn-ghost">-</button>
+            <input id="qty-input" type="number" min="1" value="1" />
+            <button id="qty-incr" class="btn btn-ghost">+</button>
+          </div>
+        </div>
+      </div>
+
+      <div style="margin-top:12px">
+        <div class="small">Modifiers (protein / extras)</div>
+        <div id="mods" class="mods"></div>
+        <div id="mod-required-note" class="mod-required-note">Please choose a protein/veg option. If you would like any changes made to the dish, please suggest in the checkout comments.</div>
+        <div id="mod-limit-note" class="mod-limit-note"></div>
+      </div>
+	  
+	  <!-- Add EXTRAS section (paid add-ons) -->
+	<div id="extras-wrap" style="margin-top:12px; display:none">
+  <div class="small">Add extras (priced per dish)</div>
+  <div id="extras" class="mods"></div>
+</div>
+
+
+      <div id="modal-allergens-wrap" style="margin-top:10px;display:none">
+        <div class="small">Allergens in this dish</div>
+        <div id="modal-allergens" class="allergen-badges"></div>
+      </div>
+
+      <div id="spice-wrap" class="spice-wrap" style="display:none">
+        <div class="spice-label">Spice level</div>
+        <div id="spice-buttons" class="spice-buttons"></div>
+      </div>
+
+      <div class="totals" style="margin-top:12px">
+        <div class="muted small">Unit price</div>
+        <div id="unit-price" style="font-weight:800">£0.00</div>
+      </div>
+
+      <div style="display:flex;justify-content:flex-end;gap:8px;margin-top:14px">
+        <button id="modal-cancel" class="btn btn-ghost">Cancel</button>
+        <button id="modal-add" class="btn btn-accent">Add to basket</button>
+      </div>
+    </div>
   </div>
 
   <!-- Checkout Modal -->
@@ -2726,7 +2859,7 @@ const EXTRAS = [
         { id: 'chicken-spring-rolls', name: 'Chicken Spring Rolls (x4)', desc: 'Crispy, deep-fried rolls filled with a savoury mixture of meat, glass noodles, and vegetables, served with a sweet chilli sauce.', price: 6.00, img: 'images/SpringRoll.jpg',  allergens: ['gluten', 'soya','molluscs','mustard','celery'] },
         { id: 'fried-tofu', name: 'Deep Fried Tofu', desc: 'Crispy Thai Fried Tofu with a sweet-spicy Thai peanut sauce!', price: 5.00, img: 'images/DeepFriedTofu.jpg', allergens: ['soya','peanuts'] },
         { id: 'fish-cakes', name: 'Thai Fish Cakes', desc: 'Flavourful, bite-sized fritters with a blend of savoury, spicy, and tangy flavours.', price: 6.00, img: 'images/thaifishcakesjpg.jpg',spiceEnabled: true, spiceDefault: 1, allergens: ['fish','egg'] },
-        { id: 'porkprawn-dumplings', name: 'Pork & Prawn Steamed Dumplings', desc: 'Steamed dumplings filled with a savoury combination of tender pork and juicy prawns.', price: 6.00, img: 'images/dumplings.jpg', allergens: ['gluten','shellfish'] },
+        { id: 'pork-dumplings', name: 'Pork Steamed Dumplings', desc: 'Steamed dumplings filled with tender pork.', price: 6.00, img: 'images/dumplings.jpg', allergens: ['gluten','soya','sesame'] },
         { id: 'fried-prawns', name: 'Deep Fried Tiger Prawns (x4)', desc: 'Tiger Prawns cooked in a crispy tempura batter served with authentic Thai sweet Chilli Sauce.', price: 6.50, img: 'images/Prawns.jpg',  allergens: ['shellfish','gluten'] },
         { id: 'thai-sausage', name: 'Thai Pork Sausage', desc: 'A traditional fermented Thai sausage made with ground pork, sticky rice, and fragrant seasonings. Served with fresh sliced ginger, whole peanuts and slices of cucumber.', price: 6.50, img: 'images/sausage.jpg', allergens: [] },
 		{ id: 'spare-ribs', name: 'Thai Spare Ribs (Sii Khrong Moo Yang)', desc: 'Tender ribs with a sweet, salty and savoury flavour. Served with a sticky carmelised glaze.', price: 7.50, img: 'images/spareribs.jpg', allergens: ['soya','gluten','molluscs','sesame'] }
@@ -2734,7 +2867,7 @@ const EXTRAS = [
       { id:'soup', title:'Soup', allowExtras:true, items:[
         { id: 'tom-yum', name: 'Tom Yum Soup 🌶️🌶️', desc: 'A vibrant and aromatic Thai classic featuring a hot and sour clear broth infused with lemongrass, galangal, and kaffir lime leaves.', price: 5.50, img: 'images/TomYum.jpg', allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 1, spiceEnabled: true, spiceDefault: 2, allergens: ['fish','soya'], allowedExtras: ['extra-chicken','extra-prawn','extra-tofu','extra-veg'] },
         { id: 'tom-kha', name: 'Tom Kha🌶️', desc: 'A creamy and aromatic Thai coconut soup featuring fragrant galangal, lemongrass, and kaffir lime leaves.', price: 5.50, img: 'images/TomKha.jpg', allowedModifiers: ['chicken','prawn','tofu','vegetable'], modifierRequired: true, modifierMax: 1, spiceEnabled: true, spiceDefault: 1, allergens: ['fish','soya'], allowedExtras: ['extra-chicken','extra-prawn','extra-tofu','extra-veg'] },
-        { id: 'dumpling-broth', name: 'Chicken Steamed Dumplings Broth (Gaew Naam)', desc: 'A savoury and flavourful broth with fragrant chicken-stuffed wontons.', price: 6.00, img: 'images/GaewNam.jpg', allergens: ['gluten','soya','celery'], allowedExtras: [''] }
+        { id: 'dumpling-broth', name: 'Pork Steamed Dumplings Broth (Gaew Naam)', desc: 'A savoury and flavourful broth with fragrant pork-stuffed wontons.', price: 6.00, img: 'images/GaewNam.jpg', allergens: ['gluten','soya','celery'], allowedExtras: [''] }
       ]},
       { id:'salad',    title:'Salad',   allowExtras:true,  items:[
         { id: 'papaya-salad', name: 'Green Papaya Salad (Som Tam)🌶️🌶️🌶️', desc: 'A spicy, savoury, and sweet Thai salad made primarily of shredded green papaya.', price: 7.00, img: 'images/somtam.jpg', spiceEnabled: true, spiceDefault: 3, allergens: ['peanuts','fish'], allowedExtras: ['extra-prawn'] },
