--- a/index.html
+++ b/index.html
@@ -2920,7 +2920,7 @@ const EXTRAS = [
       { id: 'chicken', name: 'Chicken', delta: 1.00 },
       { id: 'beef', name: 'Beef', delta: 1.50 },
       { id: 'pork', name: 'Pork', delta: 1.50 },
-      { id: 'tofu' name: 'Tofu' delta: 0.50 },
+      { id: 'tofu' name: 'Tofu', delta: 0.50 },
       { id: 'prawn', name: 'Prawn', delta: 2.00 },
       { id: 'vegetable', name: 'Vegetable', delta: 0.00 },
       { id: 'fried-egg', name: 'Fried Egg', delta: 1.00 },
@@ -5757,4 +5757,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
