Removed the Christmas/New Year re-opening message

--- a/index.html
+++ b/index.html
@@ -2218,7 +2218,7 @@ body.overlay-open {
            class="brand-logo">
       <div class="brand-title">Authentic Thai Takeaway</div>
     </div>
-		<div class="header-banner" id="headerBanner" aria-live="polite">
+		<!--<div class="header-banner" id="headerBanner" aria-live="polite">
 		  <div class="banner-slide is-active">
 			<strong>As promised, we will be re-opening on Weds 21st Jan at 17:00, refreshed and ready to serve!</strong>
 		  </div>
@@ -2231,7 +2231,7 @@ body.overlay-open {
 
 
   </a>
-</div>
+</div>-->
 
 		</div>
 
@@ -5759,3 +5759,4 @@ document.addEventListener('DOMContentLoaded', () => {
 </body>
 
 </html>
+
